stderr
JudgeMan.java:47: error: cannot find symbol
        if(isThreeCard){
           ^
  symbol:   variable isThreeCard
  location: class JudgeMan
1 error
